# SinkVis

./: .flake8  .gitignore  README.md  TEST_RESULTS.md  USAGE.md  requirements.txt  run.py
.github/workflows/: publish.yml
backend/: __init__.py  architecture.py  attention.py  eviction.py  hf_loader.py  models.py  server.py
backend/tests/: __init__.py  test_architecture.py  test_attention.py  test_eviction.py  test_linecount.py  test_server.py
examples/: README.md  real_model_demo.ipynb  sinkvis_demo.ipynb  usage_guide.ipynb
frontend/: app.js  index.html  styles.css
sinkvis/: README.md  __init__.py  attention.py  eviction.py  hooks.py  memory.py  models.py  pyproject.toml  simulation.py  utils.py
sinkvis/tests/: __init__.py  conftest.py  test_attention.py  test_eviction.py  test_hooks.py  test_linecount.py  test_memory_profiling.py  test_simulation_logic.py  test_utils.py
